--- a/test/moreBufferTests2/Makefile
+++ b/test/moreBufferTests2/Makefile
@@ -5,4 +5,5 @@
 check:
 	$(SPLINT) -exportlocal +bounds unknownsize.c arrayConstExpr.c -expect 1
 	$(SPLINT) -exportlocal +bounds fixedArrayType.c -expect 1
+	$(SPLINT) -exportlocal +bounds initBlock.c -expect 1
 
