Changed makefile to include line information in generated yacc/bison code (as I had already commited the 'der' variants.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -276,7 +276,7 @@ CHECK = 1
 # Some preferences
 ### We use the no-lines option to prevent confusion with splint flag settings.
 ### Should fix splint to avoid this...
-YFLAGS = -v -t -d --debug
+YFLAGS = -v -t -d --debug --no-lines
 LFLAGS = -L
 BISON_SRC = cgrammar.y  llgrammar.y  mtgrammar.y  signature.y
 AM_CPPFLAGS = -IHeaders
