--- a/Makefile.am
+++ b/Makefile.am
@@ -24,50 +24,4 @@
 ## To report a bug: splint-bug@splint.org
 ## 
 
-.PHONY: test
-
-binaryfixscript = ./fixBinaryDist.sh
-SUBDIRS =   src lib imports test doc
-
-binaryDir = bin
-binaryDirFiles =  $(binaryDir)/Makefile.am $(binaryDir)/Makefile.in
-
-binaryBuiltFiles = Makefile.binary.am configure.binary.ac
-
-#include these in case we're trying to build on a systems
-#without the bleeding edge versions of automake and autoconf
-binaryDerivedFiles = Makefile.binary.in configure.binary
-
-#try to remake these but don't stop if it fails.
-configure.binary:configure.binary.ac
-	-autoconf -oconfigure.binary configure.binary.ac
-
-Makefile.binary.in:Makefile.binary.am
-	-automake Makefile.binary
-	$(SED) -e s/Makefile\.binary/Makefile/ Makefile.binary.in > tMakefile.binary.in
-#	$(RM) Makefile.binary.in
-	$(CP) tMakefile.binary.in Makefile.binary.in
-#drl add this hack 3/1/2003
-#make the generated makefile depend on Makefile not Makefile.binary
-
-$(binaryDir)/Makefile.in: $(binaryDir)/Makefile.am
-	-automake $(binaryDir)/Makefile
-
-EXTRA_DIST = $(binaryfixscript) $(binaryBuiltFiles) $(binaryDerivedFiles) $(binaryDirFiles) install.html
-
-preDist:  $(binaryDir)/Makefile.in  $(binaryDerivedFiles) 
-
-bindist: $(binaryDerivedFiles) 
-	$(MAKE)
-	$(RM) -f $(binaryDir)/splint
-	$(CP) src/splint $(binaryDir)/splint
-	$(MV) install.html installSource.html
-	$(CP) doc/` uname | tr [A-Z] [a-z]`.html install.html
-	$(MAKE) -e dist dh_script=$(binaryfixscript) SUBDIRS="$(binaryDir) lib imports  doc"
-	$(MV) $(distdir).tar.gz $(distdir).`uname`.tgz
-	$(MV) installSource.html install.html
-
-dist-hook:
-	cd $(distdir); 	pwd; $(dh_script)
-
-
+SUBDIRS = src lib imports doc test
